--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>WCAG Reference</title>
+
+    <style>
+      *,
+      *:before,
+      *:after {
+        box-sizing: border-box;
+      }
+
+      body {
+        max-width: 50em;
+        margin: 0 auto;
+        padding: 0 1em;
+        line-height: 1.5;
+        font-family: sans-serif;
+      }
+
+      ul {
+        padding-left: 1em;
+      }
+    </style>
   </head>
   <body>
     <main>
