--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         box-sizing: border-box;
       }
 
+      @supports (scroll-behavior: smooth) {
+        html {
+          scroll-behavior: smooth;
+        }
+      }
+
       body {
         max-width: 50em;
         margin: 0 auto;
