--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>WCAG Reference</title>
+    <title>{{ site.name }}</title>
 
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
   </head>
   <body>
     <main>
-      <h1>WCAG Reference</h1>
+      <h1>{{ site.name }}</h1>
 
       {% assign principles = site.data.wcag %}
 
