--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>{{ site.name }}</title>
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
+    <style>{% include styles.css %}</style>
   </head>
   <body>
     <main>
